<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView_User">
        <!--android:layout_alignBottom="-100dp">-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="-70dp">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="50dp"
                app:cardCornerRadius="160dp"
                app:cardElevation="3dp">

                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="60dp">

                    <EditText
                        android:id="@+id/edittextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:drawablePadding="30dp"
                        android:hint="@string/Hint_Name"
                        android:background="@android:color/transparent"
                        android:inputType="textCapWords"
                        android:padding="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@+id/edittextName"
                        android:background="#7C7373" />

                    <EditText
                        android:id="@+id/edittextNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edittextName"
                        android:layout_margin="20dp"
                        android:drawableLeft="@drawable/ic_phone_black_24dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="30dp"
                        android:hint="@string/Hint_PhoneNumber"
                        android:inputType="number"
                        android:padding="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_below="@+id/edittextNumber"
                        android:background="#7C7373" />


                    <EditText
                        android:id="@+id/edittextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edittextNumber"
                        android:layout_margin="20dp"
                        android:drawableLeft="@drawable/ic_email_black_24dp"
                        android:background="@android:color/transparent"
                        android:drawablePadding="30dp"
                        android:hint="@string/Hint_EmailAddress"
                        android:inputType="textCapWords"
                        android:padding="10dp" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/Card_view"
                android:layout_alignTop="@+id/Card_view"
                android:elevation="10dp"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true">

                <ImageView
                    android:id="@+id/buttonAdd"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/circle"
                    android:src="@drawable/ic_person_add_white" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>



    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/imageView_User"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/avatar"
        app:civ_border_width="5dp"
        app:civ_border_color="#E7B8C6"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <!--<Button-->
        <!--android:id="@+id/buttonCountry_code"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="+380" />-->

</RelativeLayout>